# dl_oreilly_1

./: pyproject.toml
2_perceptron/: multilayer_perceptron.ipynb
2_perceptron/.ipynb_checkpoints/: multilayer_perceptron-checkpoint.ipynb
3_neuralnet/: nn.ipynb
3_neuralnet/.ipynb_checkpoints/: nn-checkpoint.ipynb
